--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <main class="content">
   <section class="description" aria-label="Title">
     <article class="two-columns">
-      <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+      <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
       <div class="two-columns__main-text">
         <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
         <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -51,7 +51,7 @@
         <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
       </li>
       <li class="cards__item">
-        <div><img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности"></div>
+        <img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности">
         <h4 class="cards__title">Иллюзия компетентности</h4>
         <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
       </li>
